# learning-records-converter

./: .dockerignore  .editorconfig  .env.default  .gitignore  Dockerfile  Pipfile  README.md  TMP_example_default_mapping_config.yaml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/api/: dependencies.py  endpoints.py  exception_handlers.py  exceptions.py  main.py  schemas.py
app/api/routers/: traces.py
app/common/: common_types.py  exceptions.py
app/common/enums/: __init__.py  custom_trace_format.py  trace_format.py  trace_formats.py
app/common/models/: mapping_config.py  mapping_config_file.py  trace.py
app/common/type/: types.py
app/common/utils/: utils_date.py  utils_dict.py  utils_enum.py  utils_general.py  utils_text.py  utils_trace.py
app/infrastructure/config/: contract.py  envconfig.py  types.py
app/infrastructure/logging/: contract.py  jsonlogger.py  types.py
app/mapper/: exceptions.py  mapper.py  mapping_engine.py
app/mapper/available_functions/: mapping_runnable_functions.py
app/mapper/evaluator/: contract.py  eval.py  exceptions.py
app/mapper/models/: mapping_models.py  mapping_schema.py
app/parsers/: exceptions.py  factory.py  jsonencoder.py  types.py
app/parsers/contracts/: parser.py
app/profile_enricher/: exceptions.py  profiler.py  profiler_types.py  types.py
data/mappers/: mapping_imscaliper_1_1_to_xapi.yml  mapping_matomo_to_xapi.yml  mapping_scorm2004_to_xapi.yml  mapping_scorm_1_1_to_xapi.yml  mapping_xapi_to_xapi.yml
docs/: 1_learning_records_xapi.md  1_mapping.md  2_project_architecture.md  3_PDC.md  README.md
docs/examples/: input_data_example.json  mapping_config_example.yml
legacy-code/: lang-detection.ipynb  vectorization.ipynb
legacy-code/bert-base-uncased-xnli-sts-finetuned-education/: README.md  config.json  config_sentence_transformers.json  similarity_evaluation_sts-test_results.csv  tokenizer_config.json
legacy-code/provider_type_detection/: LOProviders.gzip  provider-detection.ipynb  tempLOfile.gzip
tests/: conftest.py
tests/tests_api/: test_endpoints_convert.py  test_endpoints_validate.py
(+156 files in other folders)
